--- a/prepros.config
+++ b/prepros.config
@@ -911,6 +911,12 @@
     },
     "files": [
       {
+        "file": "#scorse/scss/blog.scss",
+        "config": {
+          "customOutput": "css/blog.css"
+        }
+      },
+      {
         "file": "#scorse/scss/style.scss",
         "config": {
           "customOutput": "css/style.css"
