--- a/prepros.config
+++ b/prepros.config
@@ -911,9 +911,21 @@
     },
     "files": [
       {
+        "file": "#scorse/scss/aside.scss",
+        "config": {
+          "customOutput": "#scorse/css/aside.css"
+        }
+      },
+      {
         "file": "#scorse/scss/blog.scss",
         "config": {
           "customOutput": "css/blog.css"
+        }
+      },
+      {
+        "file": "#scorse/scss/post.scss",
+        "config": {
+          "customOutput": "css/post.css"
         }
       },
       {
